[tool.poetry]
name = "rsa"
version = "4.10-dev0"
license = "Apache-2.0"
description = "Pure-Python RSA implementation"
readme = "README.md"
authors = ["Sybren A. Stüvel <sybren@stuvel.eu>"]
homepage = "https://stuvel.eu/rsa"
repository = "https://github.com/sybrenstuvel/python-rsa"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Security :: Cryptography",
]
include = [
  { path = "LICENSE", format = "sdist" },
  { path = "README.md", format = "sdist" },
  { path = "CHANGELOG.md", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8, <4"
pyasn1 = ">=0.1.3"

sympy = "^1.12.1"
concurrent-log-handler = "^0.9.25"
[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
Sphinx = "^5.3.0"
pytest = "^7.2"
pytest-cov = "^4.1.0"
tox = "^3.28.0"
mypy = "^1.10.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"pyrsa-priv2pub" = "cli.util:private_to_public"
"pyrsa-keygen" = "cli.option_parser.py:keygen"
"pyrsa-encrypt" = "cli.option_parser.py:encrypt"
"pyrsa-decrypt" = "cli.option_parser.py:decrypt"
"pyrsa-sign" = "cli.option_parser.py:sign"
"pyrsa-verify" = "cli.option_parser.py:verify"

[tool.black]
line-length = 100
