[tool.poetry]
name = "rsa"
version = "4.10-dev0"
license = "Apache-2.0"
description = "Pure-Python RSA implementation"
readme = "README.md"
authors = ["Sybren A. Stüvel <sybren@stuvel.eu>"]
homepage = "https://stuvel.eu/rsa"
repository = "https://github.com/sybrenstuvel/python-rsa"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Security :: Cryptography",
]
include = [
  { path = "LICENSE", format = "sdist" },
  { path = "README.md", format = "sdist" },
  { path = "CHANGELOG.md", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8"
pyasn1 = ">=0.1.3"

[tool.poetry.dev-dependencies]
coveralls = "^3.0.0"
Sphinx = "^5.0.0"
pytest = "^7.2"
pytest-cov = "^4.0"
tox = "^3.22.0"
mypy = "^1.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"pyrsa-priv2pub" = "rsa.util:private_to_public"
"pyrsa-keygen" = "rsa.cli:keygen"
"pyrsa-encrypt" = "rsa.cli:encrypt"
"pyrsa-decrypt" = "rsa.cli:decrypt"
"pyrsa-sign" = "rsa.cli:sign"
"pyrsa-verify" = "rsa.cli:verify"

[tool.black]
line-length = 100
